added nav bar scaffold and semantic html elements

--- a/public/index.html
+++ b/public/index.html
@@ -9,6 +9,16 @@
       name="description"
       content="Web site created using create-react-app"
     />
+    <meta
+      name="description"
+      content="Little lemon is an italian style restruant."
+    />
+    <meta name="og:title" content="Little Lemon" />
+    <meta
+      name="og:description"
+      content="Little lemon is an italian style restruant"
+    />
+    <meta name="og:image" content="../src/assets/images/Logo.svg" />
     <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
     <!--
       manifest.json provides metadata used when your web app is installed on a
