--- a/public/index.html
+++ b/public/index.html
@@ -46,7 +46,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>React App</title>
+    <title>Little Lemon</title>
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
