--- a/public/index.html
+++ b/public/index.html
@@ -46,6 +46,7 @@
       href="https://fonts.googleapis.com/css2?family=Karla:wght@200&display=swap"
       rel="stylesheet"
     />
+    <script src="https://raw.githubusercontent.com/Meta-Front-End-Developer-PC/capstone/master/api.js"></script>
     <title>Little Lemon</title>
   </head>
   <body>
